--- a/package.json
+++ b/package.json
@@ -10,13 +10,36 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/pin-input": "^2.1.0",
+    "@emailjs/browser": "^4.3.3",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/poppins": "^5.0.14",
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.3",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
+    "@tanstack/react-query": "^5.34.1",
+    "@tanstack/react-query-devtools": "^5.34.2",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.6.8",
+    "emailjs": "^4.0.3",
+    "i18next": "^23.11.3",
+    "i18next-resources-for-ts": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.4",
+    "react-i18next": "^14.1.1",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.23.0",
-    "valibot": "^0.30.0"
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
+    "valibot": "^0.30.0",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
+    "@types/node": "^20.12.8",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
